fix navbar spacing and added a scroll to top button on photo albums

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ h2 {
 }
 
 .photoGrid {
-	margin: auto;
+	margin: 20px auto;
 }
 
 .photo:hover {
